<resources>
    <string name="app_name">MobileAppManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Задачи</string>
    <string name="menu_finances">Бюджет</string>
    <string name="menu_purchases">Покупки</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="calendar">Календарь</string>

    <!--     fragment_task_remaining-->

    <string name="taskRemaining_taskNameHint">Введите название задачи</string>
    <string name="taskRemaining_taskTextHint">Введите текст задачи</string>
    <string name="taskRemaining_taskIDHint">ID</string>
    <string name="taskRemaining_addButton">Добавить</string>
    <string name="taskRemaining_readButton">Прочесть</string>
    <string name="taskRemaining_clearButton">Очистить</string>
    <string name="taskRemaining_updButton">Обновить</string>
    <string name="taskRemaining_delButton">Удалить</string>

</resources>
