<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.rache.mobileappmanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_finances"
        android:name="ru.rache.mobileappmanager.ui.finances.FinancesFragment"
        android:label="@string/menu_finances"
        tools:layout="@layout/fragment_finances" />

    <fragment
        android:id="@+id/nav_purchases"
        android:name="ru.rache.mobileappmanager.ui.purchases.PurchasesFragment"
        android:label="@string/menu_purchases"
        tools:layout="@layout/fragment_purchases" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.rache.mobileappmanager.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.rache.mobileappmanager.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.rache.mobileappmanager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.rache.mobileappmanager.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>