<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FragmentTaskRemaining">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_taskID"
            android:hint="@string/taskRemaining_taskIDHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_taskName"
            android:hint="@string/taskRemaining_taskNameHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_taskText"
            android:hint="@string/taskRemaining_taskTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
<!--    Кнопки          -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_add"
                android:text="@string/taskRemaining_addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_read"
                android:text="@string/taskRemaining_readButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskRemaining_clearButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_update"
                android:text="@string/taskRemaining_updButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_delete"
                android:text="@string/taskRemaining_delButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
<!--        Отрисовка задач         -->
        <ListView
            android:id="@+id/taskRemaining_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>
